# CoMPaSS

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_env.sh
SCOP/: README.md  __main__.py  data_processing.py  dataset_reader.py  filters.py  models.py  visualize.py
SCOP/process_masks/: __main__.py
TENOR/: README.md
TENOR/flux/: .gitignore  README.md  compass_train_lora.py
TENOR/flux/image_datasets/: scop.py
TENOR/flux/scripts/: train.sh
TENOR/flux/src/flux/: controlnet.py  model.py  util.py  xflux_pipeline.py
TENOR/flux/src/flux/modules/: conditioner.py  layers.py
TENOR/flux/train_configs/: compass.yaml
TENOR/sd/: README.md
TENOR/sd/scripts/: sd14.sh  sd15.sh  sd21.sh
TENOR/sd/src/: attn_utils.py  compass_train_unet.py  loss_utils.py  scop.py
assets/: teaser.avif
